# weeaboo_point

./: .gitignore  CMakeLists.txt  README.md  devildoctor.cpp  eventhandler.cpp  eventhandler.h  gamestate.cpp  gamestate.h  geometry.cpp  geometry.h  globals.h  memorypool.cpp  memorypool.h  parser.cpp  parser.h  resource.h  scene.cpp  scene.h  stdafx.h  text.cpp  text.h
include/: animation_controller.h  eventhandler.h  eventtypes.h  fileloader.h  gamestate.h  geometry.h  globals.h  graphing.h  imconfig.h  parser.h  scene.h  stb_truetype.h  text.h  utils.h
includes/: eventhandler.h  gamestate.h  geometry.h  globals.h  parser.h  scene.h  stb_truetype.h  text.h
scripts/: Text.txt
src/: animation_controller.cpp  eventhandler.cpp  fileloader.cpp  gamestate.cpp  geometry.cpp  graphing.cpp  main.cpp  parser.cpp  scene.cpp  text.cpp
